Wed Oct 30 02:00:26 GMT 2002  Olly Betts <olly@survex.com>

	* bootstrap,buildall: Removed buildall in favour of bootstrap script.

Thu Jul 04 00:21:34 BST 2002  Olly Betts <olly@survex.com>

	* xapview.cpp: fixed to actually compile and run successfully.

Fri May 17 14:08:10 BST 2002  Olly Betts <ollybe@ananova.net>

	* .cvsignore: updated.

Mon May 13 13:26:21 BST 2002  Olly Betts <olly@survex.com>

	* Autoconf 2.50.

	* Using std::X.

Thu May 02 16:08:02 BST 2002  Olly Betts <olly@survex.com>

	* Updated to reflect removal of OmData.

Tue Apr 23 15:06:36 BST 2002  Olly Betts <olly@survex.com>

	* .cvsignore: updated.

Tue Apr 23 15:03:01 BST 2002  Olly Betts <olly@survex.com>

	* Make buildall smart enough to generate aclocal.m4 properly and
	  remove acinclude.m4.  It now also extracts the package name from
	  configure.in so we can use the same buildall everywhere.

Tue Apr 23 14:28:05 BST 2002  Olly Betts <olly@survex.com>

	* Updated for xapian-config and xapian.m4 changes.

Thu Apr 18 14:39:22 BST 2002  Olly Betts <olly@survex.com>

	* Updated buildall; minor tweaks to configure.in.

Fri Apr 12 16:20:58 BST 2002  Olly Betts <olly@survex.com>

	* Require automake 1.5.